Fix two-column layout: remove content padding overflow, use fluid column widths

--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,9 @@ a{color: #00a0c6;text-decoration: underline}
 .top_menu a:hover,.top_menu a.act{color: #fff;background: #1994c1;}
 .top_menu a:hover .icon-home,.top_menu a.act .icon-home{background-image: url("../images/icon-home_w.png")}
 .clear{clear: both}
-.content{max-width: 980px; width:100%; margin: 0 auto;padding: 20px 15px;}
+.content{max-width: 980px; width:100%; margin: 0 auto;padding: 20px 0;}
 .columns{position: relative;overflow: hidden}
-.column{float: left;width: 460px;margin: 0 0 0 60px;}
+.column{float: left;width: calc(50% - 30px);margin: 0 0 0 60px;}
 .column:first-child{margin: 0}
 .specials{position: relative;overflow: hidden}
 .specialItem{position: relative;overflow: hidden;border-top: solid 2px #d9d9d9;padding: 10px 0 15px;}
